--- a/WeCrowd/Base.lproj/Main.storyboard
+++ b/WeCrowd/Base.lproj/Main.storyboard
@@ -246,11 +246,48 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Campaign Feed" id="QCa-y8-8n7"/>
+                    <connections>
+                        <segue destination="YAU-Pu-HJg" kind="show" id="GVO-2V-2dA"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Na-yv-FnC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="857" y="649"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="YBY-K7-UZU">
+            <objects>
+                <viewController id="YAU-Pu-HJg" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="RIa-K6-i8G"/>
+                        <viewControllerLayoutGuide type="bottom" id="jdk-S0-2oS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xU8-e1-N3Z">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="p0b-nd-NlA">
+                                <rect key="frame" x="24" y="72" width="552" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="tt6-8H-GXh"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="p0b-nd-NlA" firstAttribute="leading" secondItem="xU8-e1-N3Z" secondAttribute="leadingMargin" constant="8" id="Gs7-rM-X1X"/>
+                            <constraint firstItem="p0b-nd-NlA" firstAttribute="top" secondItem="RIa-K6-i8G" secondAttribute="bottom" constant="8" id="gig-77-YOH"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="p0b-nd-NlA" secondAttribute="trailing" constant="8" id="wtb-6W-BXh"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aHU-tn-aNc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1604" y="649"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="Logo" width="300" height="55"/>
+    </resources>
     <color key="tintColor" red="1" green="0.38665899166867213" blue="0.2383080413807257" alpha="1" colorSpace="calibratedRGB"/>
 </document>
